--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -11,6 +11,7 @@
 		max-width: 1240px;
 		flex-direction: row;
 		flex-wrap: wrap;
+		justify-content: flex-start;
 		gap: 50px;
 		background-color: #f6f6f6;
 		border-radius: 25px;
